# RSI-prak-kelompok-3

./: README.md
backend/app/: data.json  main.py
backend/app/routes/: data.py
backend/app/services/: data_services.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/services/: api.ts
tugas-1/backend/: pyproject.toml
tugas-1/backend/app/: data.json
tugas-1/frontend/app/: layout.tsx
