[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "fatihnabani",email = "fadzakin@gmail.com"}
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
